--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -6,7 +6,7 @@
     <link href="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet" media="screen">
     <style type="text/css">
       .container {
-        max-width: 500px;
+        max-width: 700px;
         padding-top: 100px;
       }
     </style>
@@ -18,6 +18,7 @@
         {% if current_user.is_anonymous %}
         <a href="{{ url_for('login') }}">Войти</a>
         {% else %}
+        <a href="{{ url_for('list') }}">Создать список</a>
         <a href="{{ url_for('logout') }}">Выйти</a>
         {% endif %}
     </div>
