--- a/app/templates/list.html
+++ b/app/templates/list.html
@@ -24,6 +24,11 @@
         {% endfor %}
         <br>
         {{ form.submit }}
+        <br>
+        <!-- {{ form.list_delete }} -->
+    </form>
+    <form action='{{ url_for("list_delete", list_id=form.id.data) }}' method="POST">
+        <input type="submit" value="Удалить список?">
     </form>
 </div>
 {% endblock %}
