--- a/app/templates/list.html
+++ b/app/templates/list.html
@@ -32,8 +32,10 @@
         <br>
         <!-- {{ form.list_delete }} -->
     </form>
-    <form action='{{ url_for("list_delete", list_id=form.id.data) }}' method="POST">
-        <input type="submit" value="Удалить список?">
-    </form>
+    {% if form.id.data %} 
+        <form action='{{ url_for("list_delete", list_id=form.id.data) }}' method="POST">
+            <input type="submit" value="Удалить список?">
+        </form>
+    {% endif %}
 </div>
 {% endblock %}
